# code-scalpel

./: .coveragerc  .flake8  .gitignore  CHECKLIST.md  CRITICAL_ISSUES_v1.2.0.md  DEPLOYMENT_v1.2.0.md  DEVELOPMENT_ROADMAP.md  DOCUMENTATION_INDEX.md  Dockerfile  Dockerfile.rest  EXECUTIVE_SUMMARY.md  GETTING_STARTED_DEV.md  GITHUB_ISSUES_TEMPLATE.md  LICENSE  MANIFEST.in  PRODUCT_BACKLOG.md  README.md  RELEASE_NOTES_v1.2.0.md  RELEASE_NOTES_v1.2.2.md  RELEASE_NOTES_v1.2.3.md  RELEASE_NOTES_v1.4.0.md  RELEASE_PROTOCOL.md  ROADMAP.md  debug_sink.py  docker-compose.yml  parser.bash  pyproject.toml  pytest.ini  requirements-secure.txt  requirements.txt  server.json  smoke_test.py  stress_test_sprawl.sh  test_mcp_client.py  test_mcp_tools.py  verify_deployment.py
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  tech-debt-defensive-paths.md
.github/workflows/: ci.yml
benchmarks/: run_benchmarks.py  sample_data_processor.py  sample_flask_app.py  sample_ml_script.py
content/blog/: devto_article.md
content/social/: hackernews_submission.md  linkedin_post.md  twitter_thread.md
demos/: README.md  test_gen_scenario.py  vibe_check.py
demos/enterprise/: AuthService.java
demos/real_world/: UserDashboard.jsx  django_views.py  fastapi_app.py
docs/: BRANDING_PROPOSAL.md  COMPREHENSIVE_GUIDE.md  CONTRIBUTING_TO_MCP_REGISTRY.md  DOCUMENTATION_INDEX.md  INDEX.md  README_old.md  RFC-003-polyglot-architecture.md  agent_integration.md  api_reference.md  examples.md  getting_started.md
docs/architecture/: RFC-001-SYMBOLIC-EXECUTION.md
docs/internal/: CHECKLIST.md  COVERAGE_ANALYSIS.md  RELEASE_PROTOCOL.md  ROADMAP.md
docs/modules/: AST_TOOLS.md  INTEGRATIONS.md  MCP_SERVER.md  PDG_TOOLS.md  SYMBOLIC_EXECUTION.md
docs/parsers/: base_parser.md  python_parser.md
docs/release_notes/: RELEASE_NOTES_v1.2.2.md  RELEASE_NOTES_v1.2.3.md  RELEASE_NOTES_v1.3.0.md
evidence/: run_all_benchmarks.py
evidence/claims/: CLAIMS_INDEX.md
evidence/comparisons/: compare_tools.py  comparison_results.json
evidence/demos/: DEMO_OUTLINE.md  refactoring_demo.py  vibe_check.py
evidence/demos/enterprise/: AuthController.java
evidence/demos/real_world/: django_views.py
evidence/performance/: cache_benchmark.py  results.json
evidence/token-efficiency/: results.json  run_benchmark.py
evidence/token-efficiency/sample_codebase/: __init__.py
evidence/vulnerability-detection/: results.json  run_benchmark.py  test_cases.py
examples/: HelloWorld.java  autogen_example.py  crewai_example.py  crewai_refactor_demo.ipynb  langchain_example.py  security_analysis_example.py
release_artifacts/: temp_xxe_test.py  v1.4_get_file_context_evidence.json  v1.4_get_symbol_references_evidence.json  v1.4_xxe_detection_evidence.json
scripts/: fix.sh  generate_demos.py  simulate_mcp_client.py  test_mcp_server.py  verify.sh  z3_hello_world.py
src/: code_analyzer.py
src/agents/: base_agent.py
src/ast_tools/: __init__.py  analyzer.py  builder.py  transformer.py  utils.py  validator.py  visualizer.py
src/code_parser/: __init__.py
src/code_parser/javascript_parsers/: javascript_parsers_esprima.py
src/code_parser/python_parsers/: python_parsers_bandit.py
src/code_scalpel/: __init__.py  cli.py  code_analyzer.py  core.py  project_crawler.py  surgical_extractor.py  surgical_patcher.py
src/code_scalpel/agents/: __init__.py  base_agent.py  code_review_agent.py  optimazation_agent.py  security_agent.py
src/code_scalpel/ast_tools/: __init__.py  analyzer.py  builder.py  call_graph.py  dependency_parser.py  transformer.py  utils.py  validator.py  visualizer.py
src/code_scalpel/code_parser/: __init__.py  base_parser.py  factory.py  interface.py  python_parser.py
src/code_scalpel/generators/: __init__.py  refactor_simulator.py  test_generator.py
src/code_scalpel/integrations/: __init__.py  autogen.py  crewai.py  mcp_server.py  rest_api_server.py
src/code_scalpel/ir/: __init__.py  nodes.py  operators.py  semantics.py
src/code_scalpel/mcp/: __init__.py  server.py
src/code_scalpel/parsers/: __init__.py  base_parser.py  factory.py  python_parser.py
src/code_scalpel/pdg_tools/: __init__.py  analyzer.py  builder.py  slicer.py  transformer.py  utils.py  visualizer.py
src/code_scalpel/symbolic_execution_tools/: __init__.py  constraint_solver.py  engine.py  interpreter.py  ir_interpreter.py  model_checker.py  path_explorer.py  result_analyzer.py  secret_scanner.py  security_analyzer.py  state_manager.py  symbolic_executor.py  taint_tracker.py  test_generator.py  type_inference.py  utils.py
src/code_scalpel/utilities/: __init__.py  cache.py  config_manager.py  data_structures.py  download_manager.py  file_manager.py  (+6 more)
src/integrations/: autogen.py  crewai.py  mcp_server.py
src/pdg_tools/: __init__.py  analyzer.py  builder.py  slicer.py  transformer.py  utils.py  visualizer.py
src/symbolic_execution_tools/: __init__.py  engine.py  model_checker.py  path_explorer.py  result_analyzer.py  symbolic_executor.py
src/utilities/: data_structures.py  file_manager.py  logger.py  process_manager.py  visualization.py
tests/: conftest.py  test_agents.py  test_ast_analyzer.py  test_ast_tools_init.py  test_base_parser.py  test_cache.py  test_call_graph.py  test_cli.py  test_code_analyzer.py  test_constraint_solver.py  test_coverage_perfect.py  test_cross_file_resolution.py  test_dependency_parser.py  test_framework_sinks.py  test_integration.py  test_integration_end_to_end.py  test_integrations.py  test_interpreter.py  test_ir.py  test_ir_interpreter.py  test_java_normalizer.py  test_javascript_normalizer.py  test_loops.py  test_mcp.py  test_mcp_client_simulation.py  test_mcp_http.py  test_mcp_integration_client.py  test_mcp_resources.py  test_new_vulnerabilities.py  test_parser_factory.py  test_pdg_analyzer.py  test_pdg_audit.py  test_pdg_builder.py  test_pdg_slicer.py  test_pdg_transformer.py  test_pdg_utils.py  test_pdg_visualizer.py  test_project_crawler.py  test_refactor_simulator.py  test_secret_scanner.py  (+11 more)
(+23 files in other folders)
