[project]
name = "code-scalpel"
version = "0.1.0"
description = "AI Agent toolkit for code analysis using ASTs, PDGs, and Symbolic Execution"
requires-python = ">=3.9"
authors = [
    {name = "Tim Escolopio", email = "3dtsus@gmail.com"}
]
dependencies = [
    "astor>=0.8.1",
    "networkx>=2.6.3",
    "z3-solver>=4.8.12",
    "sympy>=1.8",
    "graphviz>=0.16",
    "autogen>=1.0.0",
    "crewai>=0.1.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
