[project]
name = "code-scalpel"
version = "0.4.0"
description = "AI Agent toolkit for code analysis using ASTs, PDGs, and Symbolic Execution"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Tim Escolopio", email = "3dtsus@gmail.com"}
]
keywords = [
    "code-analysis",
    "ast",
    "pdg",
    "symbolic-execution",
    "ai-agents",
    "mcp",
    "autogen",
    "crewai",
    "static-analysis",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "astor>=0.8.1",
    "networkx>=2.6.3",
    "z3-solver>=4.8.12",
    "graphviz>=0.16",
    "flask>=2.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
autogen = ["pyautogen>=0.2.0"]
crewai = ["crewai>=0.1.0"]
langchain = ["langchain>=0.1.0"]
all = [
    "pyautogen>=0.2.0",
    "crewai>=0.1.0",
    "langchain>=0.1.0",
    "anthropic>=0.18.0",
    "openai>=1.0.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
]
polyglot = [
    "tree-sitter>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.0.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/tescolopio/code-scalpel"
Documentation = "https://github.com/tescolopio/code-scalpel#readme"
Repository = "https://github.com/tescolopio/code-scalpel.git"
Issues = "https://github.com/tescolopio/code-scalpel/issues"
Changelog = "https://github.com/tescolopio/code-scalpel/releases"

[project.scripts]
code-scalpel = "code_scalpel.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build]
# VCS integration - DISABLE to prevent .gitignore from leaking in
ignore-vcs = true


[tool.hatch.build.targets.wheel]
packages = ["src/code_scalpel"]


[tool.hatch.build.targets.sdist]
only-include = [
    "src/code_scalpel",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
exclude = [
    "*.gitignore",
    ".git*",
    "**/.*",
]
# ============================================================================
# CODE QUALITY ENFORCEMENT
# ============================================================================

